--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
+/*
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -25,3 +22,4 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+*/
